compress images to reduce page loading

--- a/overrides/home.html
+++ b/overrides/home.html
@@ -340,28 +340,28 @@
 <!-- screenshots -->
 <div class="top-hr">
     <div class="feature-item screenshot-box">
-        <a class="glightbox" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom" href="img/screenshots/1.3.0/Castle%20Siege.jpg"><img src="img/screenshots/1.3.0/Castle%20Siege.jpg" class="screenshot" /></a>
+        <a class="glightbox" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom" href="img/screenshots/main_page/Castle%20Siege.webp"><img src="img/screenshots/main_page/Castle%20Siege.webp" class="screenshot" /></a>
     </div>
     <div class="feature-item screenshot-box">
-        <a class="glightbox" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom" href="img/screenshots/1.3.0/Town%20Screen%20with%20Radial%20Menu.jpg"><img src="img/screenshots/1.3.0/Town%20Screen%20with%20Radial%20Menu.jpg" class="screenshot" /></a>
+        <a class="glightbox" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom" href="img/screenshots/main_page/Town%20Screen%20with%20Radial%20Menu.webp"><img src="img/screenshots/main_page/Town%20Screen%20with%20Radial%20Menu.webp" class="screenshot" /></a>
     </div>
     <div class="feature-item screenshot-box">
-        <a class="glightbox" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom" href="img/screenshots/1.4.0/Big%20spellbook.jpg"><img src="img/screenshots/1.4.0/Big%20spellbook.jpg" class="screenshot" /></a>
+        <a class="glightbox" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom" href="img/screenshots/main_page/Big%20spellbook.webp"><img src="img/screenshots/main_page/Big%20spellbook.webp" class="screenshot" /></a>
     </div>
     <div class="feature-item screenshot-box">
-        <a class="glightbox" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom" href="img/screenshots/1.4.0/Quick%20Hero%20Select%20Bastion.jpg"><img src="img/screenshots/1.4.0/Quick%20Hero%20Select%20Bastion.jpg" class="screenshot" /></a>
+        <a class="glightbox" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom" href="img/screenshots/main_page/Quick%20Hero%20Select%20Bastion.webp"><img src="img/screenshots/main_page/Quick%20Hero%20Select%20Bastion.webp" class="screenshot" /></a>
     </div>
     <div class="feature-item screenshot-box">
-        <a class="glightbox" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom" href="img/screenshots/1.4.0/Antagarich%20Burning%20Battle.jpg"><img src="img/screenshots/1.4.0/Antagarich%20Burning%20Battle.jpg" class="screenshot" /></a>
+        <a class="glightbox" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom" href="img/screenshots/main_page/Antagarich%20Burning%20Battle.webp"><img src="img/screenshots/main_page/Antagarich%20Burning%20Battle.webp" class="screenshot" /></a>
     </div>
     <div class="feature-item screenshot-box">
-        <a class="glightbox" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom" href="img/screenshots/1.4.0/Town%20and%20Unit.jpg"><img src="img/screenshots/1.4.0/Town%20and%20Unit.jpg" class="screenshot" /></a>
+        <a class="glightbox" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom" href="img/screenshots/main_page/Town%20and%20Unit.webp"><img src="img/screenshots/main_page/Town%20and%20Unit.webp" class="screenshot" /></a>
     </div>
     <div class="feature-item screenshot-box">
-        <a class="glightbox" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom" href="img/screenshots/1.4.0/Siege.jpg"><img src="img/screenshots/1.4.0/Siege.jpg" class="screenshot" /></a>
+        <a class="glightbox" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom" href="img/screenshots/main_page/Siege.webp"><img src="img/screenshots/main_page/Siege.webp" class="screenshot" /></a>
     </div>
     <div class="feature-item screenshot-box">
-        <a class="glightbox" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom" href="img/screenshots/1.4.0/Editor.jpg"><img src="img/screenshots/1.4.0/Editor.jpg" class="screenshot" /></a>
+        <a class="glightbox" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom" href="img/screenshots/main_page/Editor.webp"><img src="img/screenshots/main_page/Editor.webp" class="screenshot" /></a>
     </div>
 </div>
 
