--- a/overrides/home.html
+++ b/overrides/home.html
@@ -284,7 +284,10 @@
           </a>
           <br />
           <a href="https://discord.gg/chBT42V" title="Go to Discord" class="md-button">
-            Go to VCMI-Discord
+            VCMI-Discord
+          </a>
+          <a href="https://ko-fi.com/h3vcmi" title="Support us on Ko-fi" class="md-button">
+            Donate
           </a>
         </div>
       </div>
