--- a/overrides/home.html
+++ b/overrides/home.html
@@ -262,6 +262,52 @@
     }
 </style>
 
+<script>
+    (function(){
+        window.API_URL = "{{ config.extra.api_url | default('') }}";
+        window.API_ENDPOINT_STATS = "{{ config.extra.api_endpoint_stats | default('') }}";
+        // Endpoint path (relative) and element selector
+        const statsPath = 'api_endpoint_stats';
+        const statElementId = 'lobby_stat';
+
+        const url = window.API_URL + window.API_ENDPOINT_STATS;
+
+        // Fetch and write counts into #lobby_stat
+        fetch(url, { method: 'GET', credentials: 'omit' })
+            .then(resp => { if (!resp.ok) throw new Error('Network response not ok'); return resp.json(); })
+            .then(json => {
+                try {
+                    const players = json && json.onlinePlayersCount && json.onlinePlayersCount.current;
+                    const gamesNow = json && json.gameCount && json.gameCount.current;
+                    const gamesDay = json && json.gameCount && json.gameCount.lastDay;
+
+                    const el = document.getElementById(statElementId);
+                    if (!el) return;
+
+                    const lines = [];
+                    if (typeof players === 'number' || (typeof players === 'string' && players.match(/^[0-9]+$/))) {
+                        lines.push(`${players} online`);
+                    }
+                    if (typeof gamesNow === 'number' || (typeof gamesNow === 'string' && gamesNow.match(/^[0-9]+$/))) {
+                        lines.push(`${gamesNow} games now`);
+                    }
+                    if (typeof gamesDay === 'number' || (typeof gamesDay === 'string' && gamesDay.match(/^[0-9]+$/))) {
+                        lines.push(`${gamesDay} games in last 24h`);
+                    }
+
+                    if (lines.length) el.innerHTML = lines.map(l => `<div>${l}</div>`).join('');
+                } catch (e) {
+                    // silent fail
+                    console.warn('Failed to parse lobby stats', e);
+                }
+            })
+            .catch(err => {
+                // keep original text on error
+                console.debug('Could not fetch lobby stats:', err);
+            });
+    })();
+</script>
+
 <!-- Main site Entry button descriptions -->
 <section class="tx-container">
     <div class="tx-container-bg"></div>
@@ -334,6 +380,17 @@
             Multi Platform
         </h2>
         <p>Windows, Linux, macOS, iOS and Android</p>
+    </div>
+    <div class="feature-item">
+        <h2>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 479.116 479.116" width="24" height="24">
+                <path fill="currentColor"
+                    d="M408.951 70.165C363.704 24.919 303.546 0 239.558 0S115.412 24.919 70.165 70.165C24.919 115.412 0 175.57 0 239.558s24.918 124.146 70.165 169.393c45.247 45.247 105.405 70.165 169.393 70.165s124.146-24.918 169.393-70.165c45.247-45.247 70.165-105.405 70.165-169.393s-24.918-124.146-70.165-169.393zm-39.366 155.893c-1.141-38.785-7.187-75.873-17.566-108.605 16.922-4.791 32.653-10.738 47.349-17.882 30.041 34.253 49.265 78.207 52.307 126.487zM226.058 450.196c-20.989-5.949-40.869-25.655-57.048-56.984a228.17 228.17 0 0 1-5.844-12.219c11.593-2.202 23.68-3.935 36.277-5.158a427.471 427.471 0 0 1 26.615-1.739zm27-76.15c21.326.656 42.336 2.977 62.887 6.956a228.196 228.196 0 0 1-5.839 12.209c-16.179 31.329-36.059 51.036-57.048 56.984zm-27-26.963c-9.7.314-19.444.927-29.225 1.877-15.111 1.467-29.588 3.622-43.422 6.429-9.922-30.536-15.727-65.521-16.87-102.331h89.517zm-89.516-121.025c1.143-36.816 6.95-71.805 16.874-102.345 23.712 4.87 47.989 7.663 72.642 8.375v93.97zm89.516-120.977c-21.327-.657-42.338-2.984-62.891-6.959a228.53 228.53 0 0 1 5.843-12.218c16.179-31.33 36.058-51.037 57.048-56.985zm27-76.161c20.989 5.948 40.869 25.655 57.048 56.985a227.875 227.875 0 0 1 5.871 12.282c-10.417 1.958-21.302 3.531-32.689 4.73a429.567 429.567 0 0 1-30.229 2.096V28.92Zm81.038 44.597c-6.618-12.816-13.906-24.061-21.732-33.669 24.658 9.017 47.19 22.48 66.629 39.411-11.359 4.975-23.438 9.21-36.287 12.755-2.686-6.4-5.554-12.579-8.61-18.497zm-189.076 0c-3.041 5.888-5.896 12.035-8.57 18.401-13.017-3.574-25.073-7.775-36.326-12.659 19.438-16.93 41.97-30.393 66.628-39.41-7.826 9.607-15.114 20.852-21.732 33.668zm-17.892 43.84c-10.398 32.755-16.455 69.878-17.597 108.701h-82.09c3.041-48.266 22.254-92.208 52.281-126.457 14.553 7.039 30.243 12.923 47.406 17.756zm-17.597 135.701c1.142 38.814 7.196 75.928 17.589 108.678-16.978 4.812-32.778 10.77-47.359 17.823-30.049-34.255-49.278-78.215-52.32-126.501Zm26.909 134.116a257.5 257.5 0 0 0 8.58 18.425c6.618 12.816 13.906 24.061 21.731 33.669-24.647-9.014-47.171-22.469-66.604-39.389 11.31-4.92 23.428-9.151 36.293-12.705zm206.215.051c12.792 3.547 24.916 7.797 36.26 12.702-19.421 16.898-41.926 30.336-66.55 39.341 7.825-9.608 15.113-20.853 21.732-33.669 3.036-5.88 5.887-12.018 8.558-18.374zM325.701 355.4c-23.709-4.874-47.99-7.655-72.643-8.367v-93.975h89.516c-1.144 36.815-6.95 71.803-16.873 102.342zm-72.643-129.342v-94.023a456.82 456.82 0 0 0 33.056-2.267c13.854-1.458 27.024-3.464 39.606-5.993 9.912 30.525 15.712 65.492 16.855 102.283zm146.193 153.618.068-.141c-14.598-7.008-30.463-12.952-47.339-17.75 10.403-32.762 16.463-69.894 17.605-108.728h82.089c-3.045 48.343-22.315 92.347-52.423 126.619z"/>
+                </svg>
+            Lobby
+        </h2>
+        <p>Global lobby to play together</p>
+        <p id="lobby_stat"></p>
     </div>
 </div>
 
